--- a/project.config.json
+++ b/project.config.json
@@ -40,7 +40,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.18.0",
-  "appid": "wx4c442b0be9f69d13",
+  "appid": "wxd5d67f9d4f14494d",
   "projectname": "mall",
   "debugOptions": {
     "hidedInDevtools": []
